Use ZoneApi(Mock) instead of ZoneId in ZoneFilterMock and ZoneRegistryMock